--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "graphql": "^15.0.0",
         "graphql-subscriptions": "^1.1.0",
         "reflect-metadata": "^0.1.13",
-        "type-graphql": "^1.0.0-rc.2"
+        "type-graphql": "^1.0.0-rc.2",
+        "typedi": "^0.8.0"
     },
     "devDependencies": {
         "@types/node": "^14.0.6",
