--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "apollo-server": "^2.14.1",
         "class-validator": "^0.12.2",
         "graphql": "^15.0.0",
+        "graphql-query-complexity": "^0.6.0",
         "graphql-subscriptions": "^1.1.0",
         "reflect-metadata": "^0.1.13",
         "type-graphql": "^1.0.0-rc.2",
