--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "graphql": "^15.0.0",
         "graphql-query-complexity": "^0.6.0",
         "graphql-subscriptions": "^1.1.0",
+        "graphql-tools": "^6.0.7",
         "reflect-metadata": "^0.1.13",
         "type-graphql": "^1.0.0-rc.2",
         "typedi": "^0.8.0"
