--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "homepage": "https://github.com/MyAeroCode/server-typegraphql#readme",
     "dependencies": {
         "apollo-server": "^2.14.1",
+        "apollo-server-cache-memcached": "^0.6.5",
+        "apollo-server-cache-redis": "^1.2.1",
         "apollo-server-core": "^2.14.2",
+        "apollo-server-plugin-response-cache": "^0.5.2",
         "class-validator": "^0.12.2",
         "graphql": "^15.0.0",
         "graphql-query-complexity": "^0.6.0",
