--- a/package.json
+++ b/package.json
@@ -19,28 +19,29 @@
     },
     "homepage": "https://github.com/MyAeroCode/server-typegraphql#readme",
     "dependencies": {
-        "apollo-server": "^2.14.2",
-        "apollo-server-cache-memcached": "^0.6.5",
-        "apollo-server-cache-redis": "^1.2.1",
-        "apollo-server-core": "^2.14.2",
-        "apollo-server-plugin-response-cache": "^0.5.2",
+        "apollo-server": "^2.15.1",
+        "apollo-server-cache-memcached": "^0.6.6",
+        "apollo-server-cache-redis": "^1.2.2",
+        "apollo-server-core": "^2.15.1",
+        "apollo-server-lambda": "^2.15.1",
+        "apollo-server-plugin-response-cache": "^0.5.3",
         "class-validator": "^0.12.2",
-        "graphql": "^15.0.0",
+        "graphql": "^15.2.0",
         "graphql-query-complexity": "^0.6.0",
         "graphql-subscriptions": "^1.1.0",
-        "graphql-tools": "^6.0.7",
+        "graphql-tools": "^6.0.12",
         "reflect-metadata": "^0.1.13",
-        "type-graphql": "^1.0.0-rc.2",
+        "type-graphql": "^1.0.0-rc.3",
         "typedi": "^0.8.0"
     },
     "devDependencies": {
         "@types/chai": "^4.2.11",
         "@types/mocha": "^7.0.2",
-        "@types/node": "^14.0.6",
-        "apollo-server-testing": "^2.14.2",
+        "@types/node": "^14.0.14",
+        "apollo-server-testing": "^2.15.1",
         "chai": "^4.2.0",
         "mocha": "^7.2.0",
         "ts-node": "^8.10.2",
-        "typescript": "^3.9.3"
+        "typescript": "^3.9.6"
     }
 }
