--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
         "apollo-server-testing": "^2.15.1",
         "chai": "^4.2.0",
         "mocha": "^7.2.0",
+        "serverless": "^1.74.1",
+        "serverless-offline": "^6.4.0",
+        "serverless-plugin-typescript": "^1.1.9",
         "ts-node": "^8.10.2",
         "typescript": "^3.9.6"
     }
